--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/imageview"
-        android:src="@drawable/ic_launcher_background"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="textview"
-                android:textSize="20sp"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:id="@+id/textview"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="textview2"
-                android:textSize="40sp"
-                android:id="@+id/textview2"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/purple_700"/>
-        </LinearLayout>
-
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+<SearchView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/searchview"
+    />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:itemCount="4"
+        tools:listitem="@layout/item_view"
+        />
 
 </LinearLayout>
